docs/workflow/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-slides
  namespace: workflow-slides
spec:
  selector:
    app: workflow-slides
  ports:
    - port: 80
      targetPort: 80
      name: http
